--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    这是倩倩姐的第一个网站。
+<div class="app-container">
+    <h2>这是倩倩姐的第一个网站。</h2>
+    <ol>
+        <li>
+            <h3>静态页面</h3>
+            <div><a href="html/sina/index.html" target="_blank">新浪网站</a></div>
+        </li>
+        <li>
+            <h3>静态页面</h3>
+            <div><a href="html/mi/index.html" target="_blank">小米网站</a></div>
+        </li>
+    </ol>
+</div>
 </body>
 </html>
