--- a/html/sina/index.html
+++ b/html/sina/index.html
@@ -1,14 +1,146 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>新浪</title>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/app.css">
 </head>
+
 <body>
-    <h2>sian</h2>
+    <!-- header -->
+    <div class="header wrapper">
+        <div class="left">
+            <ul>
+                <li><a href="#">设为首页</a></li>
+                <li><a href="#">我的菜单 
+                        <select>
+                            <option>1</option>
+                            <option>2</option>
+                        </select>
+                    </a>
+                </li>
+                <li><a href="#">手机新浪网</a></li>
+                <li><a href="#">移动客户端 <img src="./images/bot-icons.png" alt=""></a></li>
+            </ul>
+        </div>
+        <div class="right">
+            <ul>
+                <li><a href="#">登录</a></li>
+                <li><a href="#">微博<img src="./images/bot-icons.png" alt=""></a></li>
+                <li><a href="#">博客<img src="./images/bot-icons.png" alt=""></a></li>
+                <li><a href="#">邮箱<img src="./images/bot-icons.png" alt=""></a></li>
+                <li><a href="#">网站导航</a></li>
+                <li><a href="#"><span>x</span> 关闭</a></li>
+            </ul>
+        </div>
+    </div>
+    <!-- search -->
+    <div class="search wrapper">
+        <div class="logo"><img src="./images/logo.png" alt=""></div>
+        <div class="s"><input type="text" placeholder="请输入关键字"><a href="#" class="search-img"></a></div>
+        <div class="weather">北京 <img src="./images/weather-icon.png" alt=""> 晴 0~-7℃</div>
+        <div class="b"><img src="./images/search-banner-02.png" alt=""></div>
+    </div>
+    <!-- /search -->
+    <!-- body -->
+    <div class="newspaper wrapper">
+        <span class="nav">
+            <ul>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+            </ul>
+        </span>
+        <span class="nav">
+            <ul>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+            </ul>
+        </span>
+        <span class="nav">
+            <ul>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+            </ul>
+        </span>
+        <span class="nav">
+            <ul>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+            </ul>
+        </span>
+        <span class="nav">
+            <ul>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+            </ul>
+        </span>
+        <span class="nav">
+            <ul>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+            </ul>
+        </span>
+        <span class="nav">
+            <ul>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">新闻</a></li>
+            </ul>
+        </span>
+    </div>
 </body>
+
 </html>
