--- a/html/sina/index.html
+++ b/html/sina/index.html
@@ -12,12 +12,11 @@
 </head>
 
 <body>
-    <!-- header -->
     <div class="header wrapper">
         <div class="left">
             <ul>
                 <li><a href="#">设为首页</a></li>
-                <li><a href="#">我的菜单 
+                <li><a href="#">我的菜单
                         <select>
                             <option>1</option>
                             <option>2</option>
@@ -39,7 +38,8 @@
             </ul>
         </div>
     </div>
-    <!-- search -->
+    <!-- /header -->
+    <hr>
     <div class="search wrapper">
         <div class="logo"><img src="./images/logo.png" alt=""></div>
         <div class="s"><input type="text" placeholder="请输入关键字"><a href="#" class="search-img"></a></div>
@@ -47,7 +47,6 @@
         <div class="b"><img src="./images/search-banner-02.png" alt=""></div>
     </div>
     <!-- /search -->
-    <!-- body -->
     <div class="newspaper wrapper">
         <span class="nav">
             <ul>
@@ -141,6 +140,86 @@
             </ul>
         </span>
     </div>
+    <!-- /body -->
+    <div class="int wrapper">
+        <div class="int-top">
+            <ul>
+                <li><a href="#">不限购100席</a></li>
+                <li><a href="#">不限购100席</a></li>
+                <li><a href="#">地铁上盖品牌物业</a></li>
+                <li><a href="#">不限购100席</a></li>
+                <li><a href="#">不限购100席</a></li>
+                <li><a href="#">地铁上盖品牌物业</a></li>
+                <li><a href="#">不限购100席</a></li>
+                <li><a href="#">不限购100席</a></li>
+            </ul>
+        </div>
+        <div class="int-img"><img src="./images/banner-a-img.jpg" alt=""></div>
+        <div class="int-bottom">
+            <ul>
+                <li><a href="#">不限购100席</a></li>
+                <li><a href="#">不限购100席</a></li>
+                <li><a href="#">地铁上盖品牌物业</a></li>
+                <li><a href="#">不限购100席</a></li>
+                <li><a href="#">不限购100席</a></li>
+                <li><a href="#">地铁上盖品牌物业</a></li>
+                <li><a href="#">不限购100席</a></li>
+                <li><a href="#">不限购100席</a></li>
+            </ul>
+        </div>
+    </div>
+    <!-- /int -->
+    <div class="bottom wrapper">
+        <div class="left">
+            <span class="img"><a href="#"><img src="./images/smad.png" alt=""></a></span>
+            <span class="img"><a href="#"><img src="./images/512108.jpg" alt=""></a></span>
+            <span class="product">
+                <h2>新浪产品</h2>
+                <div class="box"></div>
+                <div class="product-img">
+                    <ul>
+                        <li><a href="#"><img src="./images/product-icons.png" alt=""></a></li>
+                        <li><a href="#"><img src="./images/product-icons.png" alt=""></a></li>
+                        <li><a href="#"><img src="./images/product-icons.png" alt=""></a></li>
+                    </ul>
+                </div>
+                <div class="product-news">
+                    <ul>
+                        <li><a href="#">新浪财经</a></li>
+                        <li><a href="#">新浪财经</a></li>
+                        <li><a href="#">新浪财经</a></li>
+                        <li><a href="#">新浪财经</a></li>
+                        <li><a href="#">新浪财经</a></li>
+                        <li><a href="#">新浪财经</a></li>
+                    </ul>
+                </div>
+            </span>
+            <span class="sport">
+                <div class="sport-title">
+                    <ul>
+                        <li><a href="#">体育</a></li>
+                        <li><a href="#">体育</a></li>
+                        <li><a href="#">体育</a></li>
+                        <li><a href="#">体育</a></li>
+                    </ul>
+                </div>
+                <div class="sport-img"><img src="./images/part-a-sports.jpg" alt=""></div>
+                <div class="sport-bottom">
+                    <ul>
+                        <li><a href="#">中国榜样家长出炉：潮爸得奖成主流</a></li>
+                        <li><a href="#">教育did you know第二季视频全球首播</a></li>
+                    </ul>
+                </div>
+            </span>
+        </div>
+        <div class="middle">
+
+        </div>
+        <div class="right">
+
+        </div>
+    </div>
+    <!-- /bottom  -->
 </body>
 
 </html>
