--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <li>
             <h3>js效果</h3>
             <ol>
-                <li><div><a href="html/sina/index.html" target="_blank">新浪网站</a></div></li>
-                <li><div><a href="html/mi/index.html" target="_blank">小米网站</a></div></li>
+                <li><div><a href="js/dom/index.html" target="_blank">dom 练习</a></div></li>
+                <li><div><a href="js/event/index.html" target="_blank">event 网站</a></div></li>
             </ol>            
         </li>
         <li>
