--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li>
             <h3>vue作品</h3>
             <ol>
-                <li><div><a href="html/sina/index.html" target="_blank">新浪网站</a></div></li>
+                <li><div><a href="/vue-mogujie/" target="_blank">蘑菇街</a></div></li>
                 <li><div><a href="html/mi/index.html" target="_blank">小米网站</a></div></li>
             </ol>            
         </li>
